; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.set.c_set_noclobber.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.set.c_set_noclobber.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NOCLOBBER_DEFAULT = common dso_local global i32 0, align 4
@STRRparen = common dso_local global i32 0, align 4
@STRnotempty = common dso_local global i32 0, align 4
@NOCLOBBER_NOTEMPTY = common dso_local global i32 0, align 4
@STRask = common dso_local global i32 0, align 4
@NOCLOBBER_ASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**)* @set_noclobber to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_noclobber(i32** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  %6 = load i32, i32* @NOCLOBBER_DEFAULT, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32**, i32*** %3, align 8
  %8 = icmp eq i32** %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %5, align 4
  store i32 %10, i32* %2, align 4
  br label %53

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %50, %11
  %13 = load i32**, i32*** %3, align 8
  %14 = load i32*, i32** %13, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %51

16:                                               ; preds = %12
  %17 = load i32**, i32*** %3, align 8
  %18 = load i32*, i32** %17, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %26, label %20

20:                                               ; preds = %16
  %21 = load i32**, i32*** %3, align 8
  %22 = load i32*, i32** %21, align 8
  %23 = load i32, i32* @STRRparen, align 4
  %24 = call i64 @eq(i32* %22, i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %20, %16
  %27 = load i32, i32* %5, align 4
  store i32 %27, i32* %2, align 4
  br label %53

28:                                               ; preds = %20
  %29 = load i32**, i32*** %3, align 8
  %30 = getelementptr inbounds i32*, i32** %29, i32 1
  store i32** %30, i32*** %3, align 8
  %31 = load i32*, i32** %29, align 8
  store i32* %31, i32** %4, align 8
  %32 = load i32*, i32** %4, align 8
  %33 = load i32, i32* @STRnotempty, align 4
  %34 = call i64 @eq(i32* %32, i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %28
  %37 = load i32, i32* @NOCLOBBER_NOTEMPTY, align 4
  %38 = load i32, i32* %5, align 4
  %39 = or i32 %38, %37
  store i32 %39, i32* %5, align 4
  br label %50

40:                                               ; preds = %28
  %41 = load i32*, i32** %4, align 8
  %42 = load i32, i32* @STRask, align 4
  %43 = call i64 @eq(i32* %41, i32 %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %49

45:                                               ; preds = %40
  %46 = load i32, i32* @NOCLOBBER_ASK, align 4
  %47 = load i32, i32* %5, align 4
  %48 = or i32 %47, %46
  store i32 %48, i32* %5, align 4
  br label %49

49:                                               ; preds = %45, %40
  br label %50

50:                                               ; preds = %49, %36
  br label %12

51:                                               ; preds = %12
  %52 = load i32, i32* %5, align 4
  store i32 %52, i32* %2, align 4
  br label %53

53:                                               ; preds = %51, %26, %9
  %54 = load i32, i32* %2, align 4
  ret i32 %54
}

declare dso_local i64 @eq(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
